# Ferrix

./: .gitignore  AppImageBuilder.yml  Cargo.toml  Makefile  README.md  README_RU.md
.cargo/: config.toml
.github/: FUNDING.yml
docs/: README.md  units.md
docs/usage/: README.md  processors.md
ferrix-app/: Cargo.toml  README.md
ferrix-app/data/: FSM.desktop  Ferrix.desktop  com.ferrix.policy  com.mskrasnov.Ferrix.desktop  com.mskrasnov.Ferrix.service.in  meson.build
ferrix-app/data/icons/: meson.build
ferrix-app/i18n/en/: ferrix-app.ftl  ferrix_app.ftl
ferrix-app/i18n/ru/: ferrix-app.ftl  ferrix_app.ftl
ferrix-app/src/: dmi.rs  export.rs  ferrix.rs  i18n.rs  icons.rs  kernel.rs  lib.rs  load_state.rs  main.rs  messages.rs  modals.rs  pages.rs  settings.rs  sidebar.rs  styles.rs  subscription.rs  utils.rs  widgets.rs
ferrix-app/src/pages/: battery.rs  cpu.rs  cpu_freq.rs  dashboard.rs  distro.rs  dmi.rs  drm.rs  env.rs  export.rs  groups.rs  kernel.rs  ram.rs  settings.rs  soft.rs  storage.rs  sysmon.rs  system.rs  systemd.rs  users.rs  vulnerabilities.rs
ferrix-app/src/widgets/: card.rs  line_charts.rs  separated_view.rs  table.rs
ferrix-core/: Cargo.toml
ferrix-core/src/: data.rs  error.rs  lib.rs  load_state.rs
ferrix-gui/: Cargo.toml
ferrix-gui/data/: com.mskrasnov.Ferrix.gschema.xml  com.mskrasnov.Ferrix.metainfo.xml.in
ferrix-gui/po/: POTFILES.in  meson.build
ferrix-gui/src/: ferrix.rs  load_state.rs  main.rs
ferrix-lib/: Cargo.toml  README.md
ferrix-lib/src/: battery.rs  cpu.rs  cpu_freq.rs  dmi.rs  drm.rs  from_s.rs  gen_from.py  init.rs  lib.rs  parts.rs  ram.rs  soft.rs  sys.rs  traits.rs  utils.rs  vmstat.rs  vulnerabilities.rs
