[package]
name = "ferrix-app"
description = "Simple utility to get information about hardware and software"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
# publish = false
readme = "README.md"
keywords = ["ferrix", "hardware"]

[package.metadata.deb]
maintainer = "Michail Krasnov <mskrasnov07@ya.ru>"
copyright = "2025, Michail Krasnov <mskrasnov07@ya.ru>"
license-file = ["LICENSE", "0"]
extended-description = """\
Ferrix is a program for obtaining information about computer hardware and software. It is designed to work in modern Linux OS distributions, written in Rust using GTK4 and libadwaita.

Features:

1. Following the recommendations of GNOME HIG;\n
2. View information about the installed Flatpak software and systemd services;\n
3. The ability to backup and reset GNOME settings;\n
4. Export the collected data to JSON, XML or Plain Text.\
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/ferrix-app", "usr/bin/", "755"],
    ["data/com.mskrasnov.Ferrix.desktop", "usr/share/applications/", "644"],
    ["data/icons/hicolor/scalable/apps/com.mskrasnov.Ferrix.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["data/icons/hicolor/symbolic/apps/com.mskrasnov.Ferrix-symbolic.svg", "usr/share/icons/hicolor/symbolic/apps/", "644"],
]

[dependencies]
anyhow = "1.0.98"
ferrix-lib = { path = "../ferrix-lib", version = "0.2.0" }
iced = { version = "0.14.0-dev", git = "https://github.com/iced-rs/iced", features = ["tokio", "svg", "image"] }
tokio = { version = "1.47.1", features = ["full"] }
