[package]
name = "ferrix-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Intermediate crate for FSM"
# readme = "README.md"
# exclude.workspace = true

[dependencies]
anyhow = "1.0.100"
ferrix-lib = { path = "../ferrix-lib", version = "0.3.0" }
serde = { version = "1.0.228", features = ["derive"] }
