[package]
name = "ferrix-lib"
description = "A library for obtaining information about the software and hardware of a computer running Linux"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["ferrix", "hardware", "dmi", "smbios", "linux"]
categories = ["os"]

[dependencies]
anyhow = "1.0.98"
#futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
smbios-lib = "0.9.2"
#tokio = { version = "1.46.1", features = ["full"] }
xml_serde = "1.4.1"
zbus = "5.9.0"
zbus_systemd = { version = "0.25701.0", features = ["systemd1", "timedate1"] }
